# GaiaSerialIOService

./: GaiaSerialIOService.sln  README.md
GaiaSerialIOClient/: GaiaSerialIOClient.csproj  SerialClient.cs
GaiaSerialIOServer/: GaiaSerialIOServer.csproj  Launcher.cs  Router.cs
Native/: CMakeLists.txt
Native/GaiaSerialIOClient/: CMakeLists.txt  GaiaSerialIOClient.hpp  SerialClient.cpp  SerialClient.hpp
